--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="column">
           <div class="card">
             <p class="fa fa-box" style="color: red; font-size: 30px;"></p>
-            <h3>MANUFACTURING</h3>
+            <h3 style="width: 5%;">MANUFACTURING</h3>
             <p>Manufacturing industries are the chief wealth producing sectors of an economy. Economists consider the
               World manufacturing industry as a sector which generates a lot of wealth</p>
             <button class="read">READ MORE</button>
@@ -145,7 +145,7 @@
     <div class="column">
       <div class="card">
         <p class="fa fa-plane" style="color: red; font-size: 30px;"></p>
-        <h3>TRANSPORTATION</h3>
+        <h3 sty>TRANSPORTATION</h3>
         <p>With over a decade in the transportation industry, A-Z Transport (a member of Chicason Group) offers
           comprehensive road haulage services to oil & Gas and manufacturing businesses.</p>
         <button class="read">READ MORE</button>
