--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="column">
           <div class="card">
             <p class="fa fa-box" style="color: red; font-size: 30px;"></p>
-            <h3 style="width: 5%;">MANUFACTURE</h3>
+            <h3 style="width: 5%;">PRODUCT</h3>
             <p>Manufacturing industries are the chief wealth producing sectors of an economy. Economists consider the
               World manufacturing industry as a sector which generates a lot of wealth</p>
             <button class="read">READ MORE</button>
@@ -103,7 +103,7 @@
         <div class="column">
           <div class="card">
             <p class="fa fa-house" style="color: red; font-size: 30px;"></p>
-            <h3>CONSTRUCTION & REAL ESTATE</h3>
+            <h3>REAL ESTATE</h3>
             <p>We believe in the dream of every Nigerian citizen to own a home. That’s why through our member company,
               ROA Properties Plc, we provide affordable homes for Nigerians.</p>
             <button class="read">READ MORE</button>
