--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="navbar" id="myNavbar">
     <img src="/Untitled.png" alt="" class="logo">
     <a href="#home">HOME</a>
-    <a href="#about">ABOUT US</a>
+    <a href="about.html">ABOUT US</a>
     <a href="#business">OUR BUSINESS</a>
     <a href="#about">OUR BRANDS</a>
     <a href="#Media">MEDIA</a>
