--- a/about.html
+++ b/about.html
@@ -70,14 +70,10 @@
               <hr>
               <img src="/about img/values-core.jpg" alt="">
               <div class = "vertical"></div>
-              <p>
-                <ul>
-                    <li>excellence</li>
-                    <li>Fairness</li>
-                    <li>Ambition</li>
-                    <li>Dynamism</li>
-                </ul>
-              </p>
+                    <p>excellence</p>
+                    <p>Fairness</p>
+                    <p>Ambition</p>
+                    <p>Dynamism</p>
             </div>
           </div>
     </section>
