--- a/about.html
+++ b/about.html
@@ -123,6 +123,19 @@
 
 
     </main>
+
+
+    <script>
+        /* nav bar */
+    function myFunction() {
+      var x = document.getElementById("myNavbar");
+      if (x.className === "navbar") {
+        x.className += " responsive";
+      } else {
+        x.className = "navbar";
+      }
+    }
+    </script>
 </body>
 
 </html>
