--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
     <div class="navbar" id="myNavbar">
         <img src="/Untitled.png" alt="" class="logo">
-        <a href="#home">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="#about">ABOUT US</a>
         <a href="#business">OUR BUSINESS</a>
         <a href="#about">OUR BRANDS</a>
